Menu on mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
 .menu {
 	background-color: #000;
 	position: absolute;
-	top: -100%;
+	top: -150%;
 	left: 0;
 	width: 100%;
 	z-index: 7;
